# Stocks

./: .gitignore  CHANGES.md  README.md  Stocks.csproj  Stocks.sln  meson.build  update-translations.sh
Stocks/: Application.cs  AssemblyInfo.cs  CompositionRoot.cs  Constants.cs  Program.cs  meson.build
Stocks/Model/: AliasStorage.cs  Amount.cs  AppMode.cs  AppModel.cs  AppSettings.cs  AppTheme.cs  Currency.cs  Market.cs  PercentageChange.cs  StocksJsonContext.cs  Symbol.cs  SymbolStorage.cs  Ticker.cs  TickerData.cs  TickerDataExtensions.cs  TickerDataParser.cs  TickerFactory.cs  TickerFetcher.cs  TickerRange.cs
Stocks/Model/Watchlists/: WatchlistMigrator.cs  WatchlistModel.cs  WatchlistState.cs  WatchlistStorage.cs  WatchlistSummary.cs
Stocks/Ui/: AddButton.cs  AddTickerPopover.cs  Dropdown.cs  EmptyView.cs  GridView.cs  MainWindow.cs  ShortcutsDialog.cs  Sidebar.cs  SidebarItem.cs  SplitView.cs  ThemeSwitcher.cs  TickerContextMenu.cs  TickerDetails.cs  TickerGrid.cs  TickerGridCard.cs
Stocks/Ui/AddTicker/: AddButton.cs  AddTickerPopover.cs
Stocks/Ui/Details/: Dropdown.cs  TickerChart.cs  TickerChartPopover.cs  TickerDetails.cs
Stocks/Ui/Extensions/: AdwToggleGroupExtensions.cs  ScrolledWindowExtensions.cs
Stocks/Ui/Grid/: GridView.cs  TickerGrid.cs  TickerGridCard.cs  TickerGridCardFrame.cs
Stocks/Ui/PrimaryMenu/: BrowseModeSwitcher.cs  ThemeSwitcher.cs
Stocks/Ui/Sidebar/: Sidebar.cs  SidebarItem.cs  SplitView.cs
Stocks/Ui/Watchlists/: WatchlistButton.cs  WatchlistManageDialog.cs  (+1 more)
Stocks/Utils/: Builder.cs  Styles.cs  Translations.cs
po/: POTFILES  (+3 more)
(+27 files in other folders)
